[tool.poetry]
name = "imf-data-analysis"
version = "0.1.0"
description = ""
authors = ["devMuromi <devmuromi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
